Fix spacing issue at the end of /about

--- a/src/_includes/css/blocks/sidenote.css
+++ b/src/_includes/css/blocks/sidenote.css
@@ -25,10 +25,6 @@
     padding-left: var(--space-default);
   }
 
-  & + p {
-    display: none;
-  }
-
   & + p:last-child {
     display: initial;
     margin-bottom: var(--space-xx-large);
